tests/valid_programs/basics/unit_value.duck
fn main() {
    let z: () = ();
    z = ();
    z = {};
}
