tests/errors/references/lambda_captures_env_let_imm_fn.duck
fn main() {
    let a = 100;
    const f = fn () {
        a = 200;
    };
}
